--- a/src/views/MainPage.mxml
+++ b/src/views/MainPage.mxml
@@ -36,6 +36,7 @@
 		</cairngorm:PopUpWrapper>
 		<cairngorm:PopUpWrapper id="customerOrdersPopUp"
 								open="{pm.openCustomerOrders}"
+								reuse="true"
 								closed="{pm.openCustomerOrders = false}"
 								modal="true"
 								center="true">
