--- a/src/views/FurnitureProductDescription.mxml
+++ b/src/views/FurnitureProductDescription.mxml
@@ -43,12 +43,18 @@
 			   gap="30">
 		<s:HGroup width="100%" height="100%">
 			<s:VGroup width="50%" height="100%" gap="10">
-				<s:Label text="Завод-производитель: "/>
+				<s:Label text="Завод-производитель: "
+						 fontWeight="bold"/>
 				<s:Label text="{product.manufacturerName}" />
-				<s:Label text="Страна-производитель: " />
+				<s:Label text="Страна-производитель: " 
+						 fontWeight="bold"/>
 				<s:Label text="{product.manufacturerCountry}" />
-				<s:Label text="Стиль: " />
+				<s:Label text="Стиль: " 
+						 fontWeight="bold"/>
 				<s:Label text="{product.furnitureStyle}" />
+				<s:Label text="Описание: " 
+						 fontWeight="bold"/>
+				<s:Label text="{product.description}" />
 			</s:VGroup>
 			<s:SpriteVisualElement id="furnitureProductModelArea" 
 									width="200" height="100%">	
