--- a/src/views/designerPage/CreateFurnitureProduct.mxml
+++ b/src/views/designerPage/CreateFurnitureProduct.mxml
@@ -25,7 +25,7 @@
 			<s:Button id="uploadModel" 
 					  label="Загрузить на сервер"
 					  click="pm.uploadModel(manufacturerName.text, manufacturerCountry.selectedItem.label,
-					  						furnitureStyle.selectedItem.label, furnitureCategory.selectedItem.label, Number(price.text))"
+					  						furnitureStyle.selectedItem.label, furnitureCategory.selectedItem.label, Number(price.text), descriptionInput.text)"
 					  enabled="{manufacturerName.text &amp;&amp; price.text &amp;&amp; modelFileName.text}"/> 
 			<s:Button id="cancelUpload"
 					  label="Закрыть" 
@@ -60,6 +60,9 @@
 			<mx:Button id="getFileOfModel"
 					   label="Обзор..."
 					   click="pm.get3DModel()"/>
+		</mx:FormItem>
+		<mx:FormItem>
+			<s:TextArea id="descriptionInput"/>
 		</mx:FormItem>
 	</mx:Form>
 </s:Panel>
