--- a/src/FurniturePlannerConfig.mxml
+++ b/src/FurniturePlannerConfig.mxml
@@ -45,8 +45,10 @@
 		<spicefactory:DynamicCommand type="{CreateFurnitureProductCommand}" stateful="true" />
 		<spicefactory:DynamicCommand type="{LoadFurnitureProducts}" stateful="true" />
 		<spicefactory:DynamicCommand type="{DestroySessionCommand}" />
-		<spicefactory:DynamicCommand type="{CreateOrderCommand}"  />
+		<spicefactory:DynamicCommand type="{CreateOrderCommand}" stateful="true"  />
 		<spicefactory:DynamicCommand type="{LoadCustomerOrdersCommand}" />
+		<spicefactory:DynamicCommand type="{LoadCustomersOrdersCommand}" />
+		<spicefactory:DynamicCommand type="{ChangeOrderStatusCommand}" stateful="true" />
 	</fx:Declarations>
 	<fx:Script>
 		<![CDATA[
