--- a/src/views/MainPage.mxml
+++ b/src/views/MainPage.mxml
@@ -119,6 +119,10 @@
 			<views:ToolArea width="100%" height="100%" />
 		</s:VGroup>
 	</s:Scroller>
-	<managerPage:ManagerPage includeIn="managerPage" />
+	<s:HGroup paddingTop="10" paddingRight="10" paddingBottom="10" paddingLeft="10" 
+			  width="100%" height="100%">
+		<managerPage:ManagerPage  width="100%" height="100%" 
+								  includeIn="managerPage" />
+	</s:HGroup>
 	<adminPage:AdminWindow includeIn="adminPage" />
 </s:Panel>
