Свойство model вынесено в отдельный класс FurnitureModel. Добавлены свойства: высота, ширина и длина для предмета мебели. Таблица БД furniture_products разделена на две части: информация о предмете мебели и информация о трехмерной модели. Форма для загрузки нового предмета мебели содержит теперь еще и форму, для указания размеров предмета мебели. Файл с трехмерной моделью теперь кодируется и раскодируется только в объекте DTO FurnitureModelVO.

--- a/src/FurniturePlannerConfig.mxml
+++ b/src/FurniturePlannerConfig.mxml
@@ -40,8 +40,8 @@
 		<spicefactory:DynamicCommand type="{ShowAllUsersCommand}" />
 		<spicefactory:DynamicCommand type="{NavigateToMainWindow}" />
 		<spicefactory:DynamicCommand type="{CreateSessionCommand}" stateful="true" />
-		<spicefactory:DynamicCommand type="{CreateProjectCommand}" />
-		<spicefactory:DynamicCommand type="{BrowseFileCommand}" />
+		<spicefactory:DynamicCommand type="{CreateProjectCommand}" stateful="true" />
+		<spicefactory:DynamicCommand type="{BrowseFileCommand}" stateful="true" />
 		<spicefactory:DynamicCommand type="{CreateFurnitureProductCommand}" stateful="true" />
 		<spicefactory:DynamicCommand type="{LoadFurnitureProducts}" stateful="true" />
 		<spicefactory:DynamicCommand type="{DestroySessionCommand}" />
