--- a/src/views/designerPage/CreateFurnitureProduct.mxml
+++ b/src/views/designerPage/CreateFurnitureProduct.mxml
@@ -3,7 +3,8 @@
 		 xmlns:s="library://ns.adobe.com/flex/spark" 
 		 xmlns:mx="library://ns.adobe.com/flex/mx"
 		 xmlns:parsley="http://www.spicefactory.org/parsley"
-		 title="Загрузка нового предмета мебели">
+		 title="Загрузка нового предмета мебели"
+		 width="100%" height="100%">
 	<fx:Declarations>
 		<parsley:Configure />
 	</fx:Declarations>
@@ -25,44 +26,66 @@
 			<s:Button id="uploadModel" 
 					  label="Загрузить на сервер"
 					  click="pm.uploadModel(manufacturerName.text, manufacturerCountry.selectedItem.label,
-					  						furnitureStyle.selectedItem.label, furnitureCategory.selectedItem.label, Number(price.text), descriptionInput.text)"
+					  						furnitureStyle.selectedItem.label, furnitureCategory.selectedItem.label, Number(price.text), descriptionInput.text,
+					  						Number(heightInput.text), Number(widthInput.text), Number(lengthInput.text))"
 					  enabled="{manufacturerName.text &amp;&amp; price.text &amp;&amp; modelFileName.text}"/> 
 			<s:Button id="cancelUpload"
 					  label="Закрыть" 
 					  click="dispatchEvent(new Event(Event.CLOSE))"/>
 		</s:HGroup>
 	</s:controlBarContent>
-	<mx:Form>
-		<mx:FormItem label="Производитель:">
-			<mx:TextInput id="manufacturerName" />
-		</mx:FormItem>
-		<mx:FormItem label="Страна-производитель:">
-			<mx:ComboBox id="manufacturerCountry" 
-						 dataProvider="{_model.manufacturersCountries}"/>
-		</mx:FormItem>
-		<mx:FormItem label="Стиль: ">
-			<mx:ComboBox id="furnitureStyle" 
-						 dataProvider="{_model.furnitureStyles}"/>
-		</mx:FormItem>
-		<mx:FormItem label="Категория предмета мебели:">
-			<mx:ComboBox id="furnitureCategory"
-						 dataProvider="{_model.furnitureCategories}" />
-		</mx:FormItem>
-		<mx:FormItem label="Цена: (евро)">
-			<mx:TextInput id="price" />
-		</mx:FormItem>
-		<mx:FormItem label="Файл модели: ">
-			<mx:TextInput id="modelFileName" 
-						  text="{_model.currentProductFile.name}"
-						  enabled="false"/>
-		</mx:FormItem>
-		<mx:FormItem>
-			<mx:Button id="getFileOfModel"
-					   label="Обзор..."
-					   click="pm.get3DModel()"/>
-		</mx:FormItem>
-		<mx:FormItem>
-			<s:TextArea id="descriptionInput"/>
-		</mx:FormItem>
-	</mx:Form>
+	<s:HGroup width="100%" height="100%"
+			  paddingRight="30">
+		<mx:Form>
+			<mx:FormItem label="Производитель:">
+				<mx:TextInput id="manufacturerName" />
+			</mx:FormItem>
+			<mx:FormItem label="Страна-производитель:">
+				<mx:ComboBox id="manufacturerCountry" 
+							 dataProvider="{_model.manufacturersCountries}"/>
+			</mx:FormItem>
+			<mx:FormItem label="Стиль: ">
+				<mx:ComboBox id="furnitureStyle" 
+							 dataProvider="{_model.furnitureStyles}"/>
+			</mx:FormItem>
+			<mx:FormItem label="Категория предмета мебели:">
+				<mx:ComboBox id="furnitureCategory"
+							 dataProvider="{_model.furnitureCategories}" />
+			</mx:FormItem>
+			<mx:FormItem label="Цена: (евро)">
+				<mx:TextInput id="price" />
+			</mx:FormItem>
+			<mx:FormItem>
+				<s:TextArea id="descriptionInput"/>
+			</mx:FormItem>
+		</mx:Form>
+		<s:VGroup width="100%" height="100%"
+				  gap="10"
+				  paddingTop="15">
+			<s:HGroup>
+				<s:Label text="Загрузить трехмерную модель предмета мебели:" />
+				<s:VGroup verticalAlign="middle">
+					<s:TextInput id="modelFileName"
+								 text="{pm.file.name}"
+								 width="100"
+								 enabled="false"/>
+					<mx:Button id="getFileOfModel"
+							   label="Обзор..."
+							   click="pm.get3DModel()"/>
+				</s:VGroup>
+			</s:HGroup>
+			<s:Label text="Укажите размеры модели (м):" />
+			<mx:Form>
+				<mx:FormItem label="Высота:">
+					<s:TextInput id="heightInput"/>
+				</mx:FormItem>
+				<mx:FormItem label="Ширина:">
+					<s:TextInput id="widthInput"/>
+				</mx:FormItem>
+				<mx:FormItem label="Длина:">
+					<s:TextInput id="lengthInput"/>
+				</mx:FormItem>
+			</mx:Form>
+		</s:VGroup>
+	</s:HGroup>
 </s:Panel>
