--- a/src/views/MainPage.mxml
+++ b/src/views/MainPage.mxml
@@ -44,6 +44,16 @@
 				<cairngorm:AddPopUpToParsleyContext/>
 			</cairngorm:behaviors>
 		</cairngorm:PopUpWrapper>
+		<cairngorm:PopUpWrapper id="customerProjectsPopUp"
+								open="{pm.openCustomerProjects}"
+								closed="{pm.openCustomerProjects = false}"
+								modal="true"
+								center="true">
+			<userPage:CustomerProjects />
+			<cairngorm:behaviors>
+				<cairngorm:AddPopUpToParsleyContext/>
+			</cairngorm:behaviors>
+		</cairngorm:PopUpWrapper>
 	</fx:Declarations>
 	<fx:Script>
 		<![CDATA[
@@ -68,27 +78,23 @@
 	<s:controlBarContent>
 		<s:HGroup id="helpBar" 
 				  width="50%"
-				  verticalAlign="middle">
-			<s:HGroup>
-				<mx:LinkButton label="Помощь дизайнера" 
-							   textDecoration="underline"
-							   includeIn="userPage"
-							   icon = "{pm.helpButtonIcon}"/>
-			</s:HGroup>
-			<s:HGroup>
-				<mx:LinkButton label="Покупка мебели" 
-							   click = "{pm.openCustomerBasket = true}"
-							   textDecoration="underline"
-							   includeIn="userPage"
-							   icon="{pm.buyButtonIcon}"/>	
-			</s:HGroup>
-			<s:HGroup>
-				<mx:LinkButton label="Мои заказы"
-							   click = "pm.openCustomerOrders = true"
-							   textDecoration="underline"
-							   includeIn="userPage"
-							   icon="{pm.customerOrdersIcon}"/>
-			</s:HGroup>
+				  verticalAlign="middle"
+				  includeIn="userPage">
+			<mx:LinkButton label="Помощь дизайнера"
+						   textDecoration="underline"
+						   icon = "{pm.helpButtonIcon}"/>
+			<mx:LinkButton label="Покупка мебели"
+						   click = "{pm.openCustomerBasket = true}"
+						   textDecoration="underline"
+						   icon="{pm.buyButtonIcon}"/>	
+			<mx:LinkButton label="Мои заказы"
+						   click = "pm.openCustomerOrders = true"
+						   textDecoration="underline"
+						   icon="{pm.customerOrdersIcon}"/>
+			<mx:LinkButton label="Мои дизайн-проекты"
+						   click = "pm.openCustomerProjects = true"
+						   textDecoration="underline"
+						   icon="{pm.customerProjectsIcon}"/>
 		</s:HGroup>
 		<s:HGroup id="sessionControl" 
 				  width="50%" 
