--- a/src/views/ToolArea.mxml
+++ b/src/views/ToolArea.mxml
@@ -27,9 +27,13 @@
 			
 			import messages.AddFurnitureProductToRoom;
 			import messages.CreateRoomMessage;
+			import messages.ImportProjectMessage;
+			import messages.NewProject;
 			
 			import model.PlannerModelLocator;
+			import model.Project;
 			
+			import mx.controls.Alert;
 			import mx.events.ResizeEvent;
 			
 			import views.presentationmodel.ToolAreaPM;
@@ -42,11 +46,13 @@
 			public var mainAppModel:PlannerModelLocator = PlannerModelLocator.getInstance();
 			
 			[MessageHandler]
-			public function addRoom(message:CreateRoomMessage):void{
-				mainAppModel.room = new Room3D(message.roomWidth, message.roomHeight, message.roomLength,
+			public function addRoom(message:NewProject):void{
+				mainAppModel.currentProject = new Project(message.projectName, mainAppModel.currentUser.id);
+				mainAppModel.room = new Room3D(message.roomWidth, message.roomLength, message.roomHeight,
 											 this.width, this.height, drawArea);
-				
 				drawArea.addChild(mainAppModel.room);
+				
+				mainAppModel.openNewProjectPopUp = false;
 			}
 			
 			[MessageHandler]
@@ -58,6 +64,24 @@
 			private function changeRoomView(event:Event):void{
 				mainAppModel.room.changeView(event.target.selectedIndex);
 			}
+			
+			[MessageHandler]
+			public function importProject(message:ImportProjectMessage):void{
+				
+				// теперь создадим комнату заданных размеров и разместим в ней предметы мебели с заданными координатами
+				mainAppModel.room = new Room3D(message.roomSize.width, message.roomSize.length, message.roomSize.height, width, height, drawArea);
+				drawArea.addChild(mainAppModel.room);
+								
+				for each(var obj:Object in message.productsPositions){
+					var matrix:Matrix3D = new Matrix3D(obj.matrix.rawData);
+					matrix.position = new Vector3D(obj.matrix.position.x, obj.matrix.position.y, obj.matrix.position.z, obj.matrix.position.w);
+					
+					mainAppModel.room.importModelToRoom(obj.productID, matrix);
+				}  
+				
+			}
+			
+			
 		]]>
 	</fx:Script>
 	<s:controlBarContent>
@@ -65,8 +89,11 @@
 				  paddingLeft="5" paddingTop="5" paddingBottom="5"
 				  verticalAlign="middle">
 			<mx:LinkButton icon="{pm.newProjectIcon}"
-						   click="{mainAppModel.openNewProjectPopUp = true}"/>
-			<mx:LinkButton icon="{pm.saveProjectIcon}" />
+						   click="{mainAppModel.openNewProjectPopUp = true}"
+						   toolTip="Создать новый проект"/>
+			<mx:LinkButton icon="{pm.saveProjectIcon}" 
+						   click="{pm.saveProject()}" 
+						   toolTip="Сохранить проект"/>
 			<mx:LinkButton icon="{pm.printProjectIcon}" />
 		</s:HGroup>
 		<s:HGroup horizontalAlign="right"
