--- a/src/views/userPage/CreateProjectPanel.mxml
+++ b/src/views/userPage/CreateProjectPanel.mxml
@@ -13,7 +13,7 @@
 			
 			[Inject]
 			[Bindable]
-			public var _model:CreateProjectPanelPM;
+			public var pm:CreateProjectPanelPM;
 		]]>
 	</fx:Script>
 	<s:controlBarContent>
@@ -21,7 +21,7 @@
 				  horizontalAlign="right">
 			<s:Button id="createProjectButton"
 					  label="Создать проект"
-					  click ="{_model.createProject(projectNameInput.text, int(roomWidth.text), int(roomHeight.text), int(roomLength.text))}"
+					  click ="{pm.createProject(projectNameInput.text, int(roomWidth.text), int(roomHeight.text), int(roomLength.text))}"
 					  enabled = "{projectNameInput.text &amp;&amp; roomHeight.text &amp;&amp; roomWidth.text &amp;&amp; roomLength.text}"/>
 			<s:Button id="closeProjectWizardButton"
 					  click = "dispatchEvent(new Event(Event.CLOSE))"
