--- a/src/views/managerPage/ManagerPage.mxml
+++ b/src/views/managerPage/ManagerPage.mxml
@@ -16,6 +16,10 @@
 			import mx.events.FlexEvent;
 			import mx.events.ListEvent;
 			
+			import util.Util;
+			
+			import views.userPage.ProductDescriptionItemRendererForCustomerOrdersDataGrid;
+			
 			[Bindable]
 			public var mainAppModel:PlannerModelLocator = PlannerModelLocator.getInstance();
 						
@@ -33,8 +37,8 @@
 				chooseActionComboBox.selectedIndex = -1;
 			}
 			
-			private function convertDate(item:Object, column:DataGridColumn):String{
-				return item.orderCreatedDate.date + "/" + item.orderCreatedDate.month + "/" + item.orderCreatedDate.fullYear + " " + item.orderCreatedDate.hours + ":" + item.orderCreatedDate.minutes;
+			private function retrieveFurnitureProductSize(item:Object, column:DataGridColumn):String{
+				return item.furnitureProduct.furnitureModel.width + " x " + item.furnitureProduct.furnitureModel.length + " x " + item.furnitureProduct.furnitureModel.height;
 			}
 			
 		]]>
@@ -60,7 +64,7 @@
 									   width="40"
 									   dataField="orderID" />
 					<mx:DataGridColumn headerText="Дата заказа (день/месяц/год)"
-									   labelFunction="convertDate"/>
+									   labelFunction="{util.Util.convertDate}"/>
 					<mx:DataGridColumn headerText="ФИО клиента"
 									   itemRenderer="views.managerPage.CustomerFullNameRenderer"/>
 					<mx:DataGridColumn headerText="Номер телефона" 
@@ -72,17 +76,18 @@
 			</mx:DataGrid>
 			<mx:DataGrid id="customerOrderDetailDatagrid"
 						 dataProvider="{customersOrdersDatagrid.selectedItem.orderItems}"
-						 width="100%">
+						 width="100%" height="100%">
 				<mx:columns>
 					<mx:DataGridColumn headerText="ID" 
 									   width="40"
 									   dataField="productID" />
 					<mx:DataGridColumn headerText="Описание" 
-									   dataField="furnitureProduct.description" />
+									   dataField="furnitureProduct.description"
+									   itemRenderer="views.userPage.ProductDescriptionItemRendererForCustomerOrdersDataGrid"/>
 					<mx:DataGridColumn headerText="Завод-производитель" 
 									   dataField="furnitureProduct.manufacturerName" />
 					<mx:DataGridColumn headerText="Размеры (мм)" 
-									   dataField="" />
+									   labelFunction="{retrieveFurnitureProductSize}" />
 					<mx:DataGridColumn headerText="Количество (шт.)" 
 									   dataField="quantity" />
 					<mx:DataGridColumn headerText="Цена (евро)" 
