--- a/src/views/userPage/CustomerOrderItems.mxml
+++ b/src/views/userPage/CustomerOrderItems.mxml
@@ -38,7 +38,7 @@
 		<mx:DataGrid horizontalGridLines="false" verticalGridLines="false"
 					 borderVisible="false" 
 					 dataProvider="{mainAppModel.customerBasket}"
-					 width="100%">
+					 width="100%" height="400">
 			<mx:columns>
 				<mx:DataGridColumn id="customerOrderDatagrid" width="15">
 					<mx:itemRenderer>
@@ -61,19 +61,20 @@
 				</mx:DataGridColumn>
 				<mx:DataGridColumn headerText="Описание"
 								   dataField="description" 
-								   wordWrap="true">
+								   width="200"
+								   itemRenderer="views.userPage.ProductDescriptionRenderer">
 				</mx:DataGridColumn>
 				<mx:DataGridColumn headerText="Завод-производитель" 
 								   dataField="manufacturerName"
 								   width="150"/>
 				<mx:DataGridColumn headerText="Страна" dataField="manufacturerCountry"/>
-				<mx:DataGridColumn headerText="Цена" dataField="price"/>
+				<mx:DataGridColumn headerText="Цена (евро)" dataField="price"/>
 				<mx:DataGridColumn headerText="Количество" dataField="quantity" />
 			</mx:columns>
 		</mx:DataGrid>
 		<s:HGroup width="100%"
 				  horizontalAlign="right">
-			<s:Label text="Общая стоимость: " 
+			<s:Label text="Общая стоимость (евро): " 
 					 fontSize="16" />
 			<s:Label text="{pm.totalPrice}"
 					 fontSize="16"/>
